--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -1331,6 +1331,255 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this exercise, I want you to create a new constant dict, called MENU, representing\n",
+    "the possible items you can order at a restaurant. The keys will be strings, and the values will be prices (i.e., integers). You should then write a function, restaurant, that\n",
+    "asks the user to enter an order:\n",
+    "- If the user enters the name of a dish on the menu, the program prints the price\n",
+    "and the running total. It then asks the user again for their order.\n",
+    "- If the user enters the name of a dish not on the menu, the program scolds the\n",
+    "user (mildly). It then asks the user again for their order.\n",
+    "- If the user enters an empty string, the program stops prompting and prints the\n",
+    "total amount."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item: tea,price: 10, total price: 10\n",
+      "item: pizza,price: 25, total price: 35\n",
+      "item: tacos,price: 20, total price: 55\n",
+      "sorry, we don't have that\n",
+      "The total is 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "MENU = {'tea': 10, 'pizza': 25, 'chawarma': 12, 'tacos': 20}  \n",
+    "\n",
+    "def restaurant():\n",
+    "    total_price = 0\n",
+    "    while True:\n",
+    "       order = input('Enter your order: ')\n",
+    "       if order == '':\n",
+    "          print(f'The total is {total_price}')\n",
+    "          break\n",
+    "       elif order in MENU:\n",
+    "           price = MENU[order]\n",
+    "           total_price = total_price + price\n",
+    "           print(f'item: {order},price: {price}, total price: {total_price}')\n",
+    "       else:\n",
+    "           print('sorry, we don\\'t have that')\n",
+    "          \n",
+    "restaurant()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a dict in which the keys are usernames and the values are passwords,both represented as strings. Create a tiny login system, in which the user must enter a username and password. If there is a match, then indicate that the user\n",
+    "has successfully logged in. If not, then refuse them entry. (Note: This is a nice little exercise, but please never store unencrypted passwords. It’s a major security risk.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid password\n"
+     ]
+    }
+   ],
+   "source": [
+    "credentials = {'kasozi': 'love', 'mirembe': 'computer', 'bob': 'alice'}\n",
+    "\n",
+    "def login():\n",
+    "    user_name = input('Enter your user name: ')\n",
+    "    password = input('Enter your password: ')\n",
+    "    if user_name in credentials:\n",
+    "        if password == credentials[user_name]:\n",
+    "            print('login successfull')\n",
+    "        else:\n",
+    "            print('Invalid password')\n",
+    "    else:\n",
+    "        print('user name doesn\\'t exist')\n",
+    "\n",
+    "login()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a dict whose keys are dates (represented by strings) from the most recent week and whose values are temperatures. Ask the user to enter a date, and display the temperature on that date, as well as the previous and subsequent dates, if available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define a dict whose keys are names of people in your family, and whose values are their birth dates, as represented by Python date objects (http://mng.bz/jggr). Ask the user to enter the name of someone in your family, and have the\n",
+    "program calculate how many days old that person is. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bob is 0 days old\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "\n",
+    "family_details = {\n",
+    "    'kasozi': date(1997, 9, 4),\n",
+    "    'vanessa': date(2001, 5, 25),\n",
+    "    'isaac': date(1642, 12, 25)\n",
+    "}\n",
+    "\n",
+    "def get_days():\n",
+    "    name = input('Insert the name :')\n",
+    "    dob = family_details.get(name, date.today())\n",
+    "    today = date.today()\n",
+    "    days = (today - dob).days\n",
+    "    print(f'{name} is {days} days old')\n",
+    "\n",
+    "get_days()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Specifically, write a function, get_rainfall, that tracks rainfall in a number of cities. Users of your program will enter the name of a city; if the city name is blank, then the function prints a report (which I’ll describe) before exiting. If the city name isn’t blank, then the program should also ask the user how much rain has fallen in that city (typically measured in millimeters). After the user enters the quantity of rain, the program again asks them for a city name, rainfall amount, and so on—until the user presses Enter instead of typing the name of a city.When the user enters a blank city name, the program exits—but first, it reports\n",
+    "how much total rainfall there was in each city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kampala --------- 50\n",
+      "Mbarara --------- 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_rainfall():\n",
+    "    rainfall = {}\n",
+    "    while True:\n",
+    "       city = input('Enter the city: ')\n",
+    "       if city == '':\n",
+    "          print_report(rainfall)\n",
+    "          break\n",
+    "       else:\n",
+    "          amount = int(input(f'Enter the amount of rainfall for {city}'))\n",
+    "          rainfall[city] = rainfall.get(city, 0) + amount\n",
+    "\n",
+    "\n",
+    "def print_report(rainfall):\n",
+    "   for city, amount in rainfall.items():\n",
+    "      print(f'{city} --------- {amount}')\n",
+    "\n",
+    "get_rainfall()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of printing just the total rainfall for each city, print the total rainfall and the average rainfall for reported days. Thus, if you were to enter 30, 20, and 40 for Boston, you would see that the total was 90 and the average was 30."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read through a text file on disk. Use a dict to track how many words of each length are in the file—that is, how many three-letter words, four-letter words, five-letter words, and so on. Display your results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of printing just the total rainfall for each city, print the total rainfall and the average rainfall for reported days. Thus, if you were to enter 30, 20, and 40 for Boston, you would see that the total was 90 and the average was 30."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open a log file from a Unix/Linux system—for example, one from the Apache server. For each response code (i.e., three-digit code indicating the HTTP request’s success or failure), store a list of IP addresses that generated that code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
