--- a/Dictionaries.ipynb
+++ b/Dictionaries.ipynb
@@ -362,21 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'id': '1',\n",
-       " 'name': 'SPZ 001',\n",
-       " 'duration': 10,\n",
-       " 'owner': {'name': 'Kasozi Vincent', 'age': 26, 'experience': 1}}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id         1         \n",
+      "name       SPZ 001   \n",
+      "duration           10\n"
+     ]
     }
    ],
    "source": [
@@ -384,15 +380,11 @@
     "    'id': '1',\n",
     "    'name': 'SPZ 001',\n",
     "    'duration': 5,\n",
-    "    'owner' : {\n",
-    "        'name': 'Kasozi Vincent',\n",
-    "        'age': 26,\n",
-    "        'experience': 1 \n",
-    "    }\n",
     "}\n",
-    "\n",
+    "template = '{0:10} {1:10}'\n",
     "project['duration'] = 10\n",
-    "project"
+    "for record in project.items():\n",
+    "    print(template.format(*record))"
    ]
   },
   {
