--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -1354,23 +1354,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "item: tea,price: 10, total price: 10\n",
-      "item: pizza,price: 25, total price: 35\n",
-      "item: tacos,price: 20, total price: 55\n",
-      "sorry, we don't have that\n",
-      "The total is 55\n"
+      "The total is 0\n"
      ]
     }
    ],
    "source": [
-    "MENU = {'tea': 10, 'pizza': 25, 'chawarma': 12, 'tacos': 20}  \n",
+    "menu = {'tea': 10, 'pizza': 25, 'chawarma': 12, 'tacos': 20}  \n",
     "\n",
     "def restaurant():\n",
     "    total_price = 0\n",
@@ -1379,8 +1375,8 @@
     "       if order == '':\n",
     "          print(f'The total is {total_price}')\n",
     "          break\n",
-    "       elif order in MENU:\n",
-    "           price = MENU[order]\n",
+    "       elif order in menu:\n",
+    "           price = menu[order]\n",
     "           total_price = total_price + price\n",
     "           print(f'item: {order},price: {price}, total price: {total_price}')\n",
     "       else:\n",
@@ -1411,7 +1407,7 @@
     }
    ],
    "source": [
-    "credentials = {'kasozi': 'love', 'mirembe': 'computer', 'bob': 'alice'}\n",
+    "credentials = {'kasozi': 'function', 'mirembe': 'computer', 'bob': 'alice'}\n",
     "\n",
     "def login():\n",
     "    user_name = input('Enter your user name: ')\n",
@@ -1570,6 +1566,50 @@
    "metadata": {},
    "source": [
     "Open a log file from a Unix/Linux system—for example, one from the Apache server. For each response code (i.e., three-digit code indicating the HTTP request’s success or failure), store a list of IP addresses that generated that code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dict.update method merges two dicts. Write a function that takes any number of dicts and returns a dict that reflects the combination of all of them. If the same key appears in more than one dict, then the most recently merged\n",
+    "dict’s value should appear in the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function that takes any even number of arguments and returns a dict based on them. The even-indexed arguments become the dict keys, while the odd-numbered arguments become the dict values. Thus, calling the function with the arguments ('a', 1, 'b', 2) will result in the dict {'a':1, 'b':2} being returned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function , dict_partition, that takes one dict (d) and a function (f) as arguments. dict_partition will return two dicts, each containing key-value pairs from d. The decision regarding where to put each of the key-value pairs\n",
+    "will be made according to the output from f, which will be run on each key-value pair in d. If f returns True, then the key-value pair will be put in the first output dict. If f returns False, then the key-value pair will be put in the second output dict."
    ]
   },
   {
