--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -1341,6 +1341,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In this exercise, I want you to create a new constant dict, called MENU, representing\n",
     "the possible items you can order at a restaurant. The keys will be strings, and the values will be prices (i.e., integers). You should then write a function, restaurant, that\n",
     "asks the user to enter an order:\n",
@@ -1528,10 +1535,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city: ------------- Total ---------------- Avg\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_rainfall_avg():\n",
+    "    rainfall = {}\n",
+    "    while True:\n",
+    "        city = input('Enter the city: ')\n",
+    "        if city == '':\n",
+    "            print_report(rainfall)\n",
+    "            break\n",
+    "        else:\n",
+    "            amount = int(input('Enter the amount in millimeters: '))\n",
+    "            rainfall[city] = rainfall.get(city, []) + [amount]\n",
+    "            print(rainfall)\n",
+    "\n",
+    "def print_report(rainfall):\n",
+    "    print('city: ------------- Total ---------------- Avg')\n",
+    "    for (key, value) in rainfall.items():\n",
+    "        print(f'{key} ------------- {sum(value)} ---------------- {sum(value)/len(value)}')\n",
+    "\n",
+    "get_rainfall_avg()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1542,24 +1576,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'L': ['Lorem'],\n",
+       " 'i': ['ipsum',\n",
+       "  'id',\n",
+       "  'in',\n",
+       "  'iaculis',\n",
+       "  'in',\n",
+       "  'in',\n",
+       "  'interdum',\n",
+       "  'ipsum',\n",
+       "  'ipsum',\n",
+       "  'in',\n",
+       "  'in',\n",
+       "  'iaculis',\n",
+       "  'ipsum',\n",
+       "  'in',\n",
+       "  'id',\n",
+       "  'id',\n",
+       "  'id'],\n",
+       " 'd': ['dolor',\n",
+       "  'dictum',\n",
+       "  'diam',\n",
+       "  'diam',\n",
+       "  'dignissim',\n",
+       "  'dapibus',\n",
+       "  'dapibus',\n",
+       "  'dolor'],\n",
+       " 's': ['sit',\n",
+       "  'suscipit.',\n",
+       "  'suscipit',\n",
+       "  'sem',\n",
+       "  'sem',\n",
+       "  'scelerisque.',\n",
+       "  'semper.',\n",
+       "  'sit',\n",
+       "  'sed',\n",
+       "  'sapien',\n",
+       "  'sem.',\n",
+       "  'suscipit',\n",
+       "  'sed',\n",
+       "  'sed',\n",
+       "  'sapien',\n",
+       "  'sodales',\n",
+       "  'sapien.',\n",
+       "  'suscipit.',\n",
+       "  'sem'],\n",
+       " 'a': ['amet,',\n",
+       "  'adipiscing',\n",
+       "  'ac',\n",
+       "  'at',\n",
+       "  'augue',\n",
+       "  'a',\n",
+       "  'ac',\n",
+       "  'at',\n",
+       "  'aliquam',\n",
+       "  'a',\n",
+       "  'aliquam,',\n",
+       "  'at',\n",
+       "  'accumsan,',\n",
+       "  'ante',\n",
+       "  'ac',\n",
+       "  'a',\n",
+       "  'amet',\n",
+       "  'a',\n",
+       "  'ante',\n",
+       "  'a',\n",
+       "  'arcu',\n",
+       "  'aliquam',\n",
+       "  'a',\n",
+       "  'aliquet',\n",
+       "  'ac,',\n",
+       "  'aliquet',\n",
+       "  'at',\n",
+       "  'accumsan.',\n",
+       "  'ac',\n",
+       "  'ac',\n",
+       "  'aliquam',\n",
+       "  'aliquet.',\n",
+       "  'auctor,',\n",
+       "  'aliquet'],\n",
+       " 'c': ['consectetur',\n",
+       "  'consectetur,',\n",
+       "  'consectetur',\n",
+       "  'consectetur',\n",
+       "  'cubilia',\n",
+       "  'curae;',\n",
+       "  'consequat,',\n",
+       "  'commodo',\n",
+       "  'cursus',\n",
+       "  'cubilia',\n",
+       "  'curae;',\n",
+       "  'convallis',\n",
+       "  'consequat',\n",
+       "  'consequat,',\n",
+       "  'consectetur',\n",
+       "  'congue'],\n",
+       " 'e': ['elit.',\n",
+       "  'et',\n",
+       "  'eros',\n",
+       "  'et',\n",
+       "  'elit',\n",
+       "  'euismod.',\n",
+       "  'eu',\n",
+       "  'erat',\n",
+       "  'elit',\n",
+       "  'eget',\n",
+       "  'egestas',\n",
+       "  'eget',\n",
+       "  'euismod,',\n",
+       "  'eget,',\n",
+       "  'eu',\n",
+       "  'eget',\n",
+       "  'erat',\n",
+       "  'eleifend',\n",
+       "  'eget',\n",
+       "  'enim',\n",
+       "  'enim',\n",
+       "  'et',\n",
+       "  'euismod',\n",
+       "  'et',\n",
+       "  'eget',\n",
+       "  'enim,',\n",
+       "  'eu',\n",
+       "  'enim',\n",
+       "  'eget.',\n",
+       "  'euismod',\n",
+       "  'et',\n",
+       "  'eros',\n",
+       "  'elit',\n",
+       "  'elementum,',\n",
+       "  'elit,',\n",
+       "  'elementum.',\n",
+       "  'enim',\n",
+       "  'elit',\n",
+       "  'eget',\n",
+       "  'ex',\n",
+       "  'est,',\n",
+       "  'elementum',\n",
+       "  'enim'],\n",
+       " 'S': ['Sed',\n",
+       "  'Sed',\n",
+       "  'Sed',\n",
+       "  'Suspendisse',\n",
+       "  'Sed',\n",
+       "  'Sed',\n",
+       "  'Sed',\n",
+       "  'Suspendisse',\n",
+       "  'Sed'],\n",
+       " 'f': ['fringilla',\n",
+       "  'fringilla',\n",
+       "  'faucibus',\n",
+       "  'felis',\n",
+       "  'felis',\n",
+       "  'felis',\n",
+       "  'faucibus.',\n",
+       "  'faucibus',\n",
+       "  'fringilla,',\n",
+       "  'felis',\n",
+       "  'facilisi.',\n",
+       "  'finibus.',\n",
+       "  'feugiat',\n",
+       "  'facilisi.'],\n",
+       " 'l': ['lectus.',\n",
+       "  'ligula',\n",
+       "  'leo,',\n",
+       "  'libero',\n",
+       "  'ligula',\n",
+       "  'lacus',\n",
+       "  'luctus',\n",
+       "  'leo',\n",
+       "  'libero',\n",
+       "  'ligula.',\n",
+       "  'lacinia.',\n",
+       "  'lectus.',\n",
+       "  'luctus',\n",
+       "  'lectus',\n",
+       "  'leo',\n",
+       "  'lorem,',\n",
+       "  'ligula.',\n",
+       "  'luctus',\n",
+       "  'lacus',\n",
+       "  'ligula',\n",
+       "  'lacinia',\n",
+       "  'lorem',\n",
+       "  'ligula',\n",
+       "  'lacinia',\n",
+       "  'lectus.'],\n",
+       " 'V': ['Vestibulum', 'Vestibulum', 'Vestibulum', 'Vivamus'],\n",
+       " 'r': ['rutrum',\n",
+       "  'risus',\n",
+       "  'risus',\n",
+       "  'rutrum',\n",
+       "  'rutrum',\n",
+       "  'risus',\n",
+       "  'risus.',\n",
+       "  'rhoncus,'],\n",
+       " 'm': ['mi',\n",
+       "  'metus',\n",
+       "  'malesuada.',\n",
+       "  'mi',\n",
+       "  'maximus',\n",
+       "  'metus.',\n",
+       "  'mollis.',\n",
+       "  'magna',\n",
+       "  'molestie',\n",
+       "  'massa',\n",
+       "  'mauris',\n",
+       "  'malesuada',\n",
+       "  'metus.',\n",
+       "  'malesuada',\n",
+       "  'malesuada',\n",
+       "  'mi',\n",
+       "  'magna.',\n",
+       "  'mollis.'],\n",
+       " 'v': ['vitae',\n",
+       "  'vitae',\n",
+       "  'viverra',\n",
+       "  'vitae.',\n",
+       "  'vel',\n",
+       "  'vulputate.',\n",
+       "  'volutpat.',\n",
+       "  'volutpat',\n",
+       "  'vel',\n",
+       "  'volutpat.',\n",
+       "  'vulputate',\n",
+       "  'viverra',\n",
+       "  'varius.',\n",
+       "  'vehicula',\n",
+       "  'vehicula',\n",
+       "  'venenatis',\n",
+       "  'vestibulum',\n",
+       "  'vel',\n",
+       "  'vitae',\n",
+       "  'vitae',\n",
+       "  'velit',\n",
+       "  'vehicula',\n",
+       "  'vel',\n",
+       "  'varius',\n",
+       "  'vitae',\n",
+       "  'vitae'],\n",
+       " 't': ['tincidunt',\n",
+       "  'tempor,',\n",
+       "  'turpis.',\n",
+       "  'tristique',\n",
+       "  'tincidunt.',\n",
+       "  'tincidunt',\n",
+       "  'tempus',\n",
+       "  'tristique',\n",
+       "  'tempor,',\n",
+       "  'turpis',\n",
+       "  'tempus',\n",
+       "  'tincidunt.',\n",
+       "  'tellus',\n",
+       "  'turpis',\n",
+       "  'tristique',\n",
+       "  'turpis'],\n",
+       " 'q': ['quam', 'quis'],\n",
+       " 'E': ['Etiam'],\n",
+       " 'g': ['gravida', 'gravida,'],\n",
+       " 'F': ['Fusce', 'Fusce'],\n",
+       " 'n': ['nec',\n",
+       "  'nec',\n",
+       "  'nunc.',\n",
+       "  'non',\n",
+       "  'nunc',\n",
+       "  'nibh',\n",
+       "  'nunc,',\n",
+       "  'nec',\n",
+       "  'non',\n",
+       "  'nulla',\n",
+       "  'non',\n",
+       "  'nunc',\n",
+       "  'neque',\n",
+       "  'nibh',\n",
+       "  'nec',\n",
+       "  'nec',\n",
+       "  'nibh',\n",
+       "  'nibh',\n",
+       "  'non',\n",
+       "  'nisi',\n",
+       "  'nec',\n",
+       "  'nulla',\n",
+       "  'neque'],\n",
+       " 'I': ['Integer', 'In', 'Integer'],\n",
+       " 'p': ['pulvinar,',\n",
+       "  'purus',\n",
+       "  'pulvinar,',\n",
+       "  'pulvinar',\n",
+       "  'primis',\n",
+       "  'posuere',\n",
+       "  'porta.',\n",
+       "  'primis',\n",
+       "  'posuere',\n",
+       "  'potenti.',\n",
+       "  'porttitor,',\n",
+       "  'purus,',\n",
+       "  'purus.',\n",
+       "  'porta'],\n",
+       " 'o': ['ornare', 'orci', 'orci', 'odio.', 'orci', 'odio.'],\n",
+       " 'D': ['Donec', 'Donec', 'Donec', 'Donec'],\n",
+       " 'U': ['Ut', 'Ut'],\n",
+       " 'j': ['justo', 'justo'],\n",
+       " 'u': ['urna',\n",
+       "  'ultricies',\n",
+       "  'urna',\n",
+       "  'ultrices',\n",
+       "  'urna',\n",
+       "  'ut',\n",
+       "  'ullamcorper.',\n",
+       "  'ultrices',\n",
+       "  'ultricies',\n",
+       "  'ut',\n",
+       "  'ultrices,',\n",
+       "  'ultrices,',\n",
+       "  'urna'],\n",
+       " 'N': ['Nulla', 'Nullam', 'Nulla', 'Nulla'],\n",
+       " 'C': ['Curabitur', 'Curabitur', 'Cras', 'Cras', 'Curabitur'],\n",
+       " 'A': ['Aliquam', 'Aliquam'],\n",
+       " 'P': ['Praesent', 'Proin', 'Phasellus'],\n",
+       " 'Q': ['Quisque', 'Quisque'],\n",
+       " 'M': ['Mauris', 'Morbi', 'Maecenas', 'Mauris'],\n",
+       " 'b': ['bibendum,', 'bibendum', 'blandit'],\n",
+       " 'h': ['hendrerit']}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Instead of printing just the total rainfall for each city, print the total rainfall and the average rainfall for reported days. Thus, if you were to enter 30, 20, and 40 for Boston, you would see that the total was 90 and the average was 30."
+    "def read_data():\n",
+    "    file = open('data/data.txt')\n",
+    "    for line in file.readlines():\n",
+    "       for word in line.strip().split():\n",
+    "        yield word\n",
+    "\n",
+    "def count_words():\n",
+    "    word_count = {}\n",
+    "    for word in read_data():\n",
+    "        word_count[word[0]] = word_count.get(word[0], []) + [word]\n",
+    "    return word_count\n",
+    "\n",
+    "count_words()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1570,10 +1936,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'200': ['192.168.1.101', '192.168.1.101'],\n",
+       " '403': ['192.168.1.102'],\n",
+       " '500': ['192.168.1.103'],\n",
+       " '300': ['192.168.1.101'],\n",
+       " '404': ['192.168.1.102']}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read_data():\n",
+    "    file = open('data/apache.txt')\n",
+    "    for line in file.readlines():\n",
+    "        yield line.strip()\n",
+    "\n",
+    "def foo():\n",
+    "    D = {}\n",
+    "    for line in read_data():\n",
+    "        fields = line.split() #convert it to a list so that we can easily get the items\n",
+    "        ip_address = fields[0] # the first field is the ip address\n",
+    "        status_code = fields[8] # the eighth field is the http status code\n",
+    "        D[status_code] = D.get(status_code, []) + [ip_address]\n",
+    "    return D\n",
+    "foo()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1610,6 +2006,70 @@
    "source": [
     "Write a function , dict_partition, that takes one dict (d) and a function (f) as arguments. dict_partition will return two dicts, each containing key-value pairs from d. The decision regarding where to put each of the key-value pairs\n",
     "will be made according to the output from f, which will be run on each key-value pair in d. If f returns True, then the key-value pair will be put in the first output dict. If f returns False, then the key-value pair will be put in the second output dict."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function, called how_many_different_numbers, that takes a single list of integers and returns the number of different integers it contains."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read through a server (e.g., Apache or nginx) log file. What were the different IP addresses that tried to access your server?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading from that same server log, what response codes were returned to users? The 200 code represents “OK,” but there are also 403, 404, and 500 errors. (Regular expressions aren’t required here but will probably help.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use os.listdir (http://mng.bz/YreB) to get the names of files in the current directory. What file extensions (i.e., suffixes following the final . character) appear in that directory? It’ll probably be helpful to use os.path.splitext\n",
+    "(http://mng.bz/GV4v)"
    ]
   },
   {
