--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -1981,10 +1981,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'kasozi', 'age': 26, 'country': 'Algeria'}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def merge(*dicts):\n",
+    "    result = {}\n",
+    "    for _dict in dicts:\n",
+    "        result.update(_dict)\n",
+    "    return result\n",
+    "\n",
+    "merge({'name': 'kasozi', 'age': 26}, {'country': 'Algeria'})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1995,10 +2014,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1,): ['a'], 5: 'f'}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def from_args(*args):\n",
+    "    if len(args) % 2 == 0:\n",
+    "        even_indexed = [i for i in args[::2]] # from 0 to end of list\n",
+    "        odd_indexed = [i for i in args[1::2]] # from 1 to end of list\n",
+    "        return dict(zip(even_indexed, odd_indexed))\n",
+    "    else:\n",
+    "        print('please pass in an even number of arguments')\n",
+    "\n",
+    "from_args(1, ['a'], 5, 'f')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2031,10 +2071,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [1, 1, 6, 5, 5, 6, 3, 5, 4]\n",
+    "\n",
+    "def count_unique(numbers):\n",
+    "    results = set(numbers)\n",
+    "    return list(results)\n",
+    "\n",
+    "count_unique(numbers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2078,6 +2137,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Files"
+   ]
   },
   {
    "cell_type": "markdown",
